<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="lijewski.demodb.presentation.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <EditText
            android:id="@+id/search_firstname_edittext"
            style="@style/SearchDialogEditTextStyle"
            android:hint="@string/firstname_hint"
            android:text="@={viewModel.firstName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/search_lastname_edittext"
            style="@style/SearchDialogEditTextStyle"
            android:hint="@string/lastname_hint"
            android:text="@={viewModel.lastName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            app:layout_constraintTop_toBottomOf="@id/search_firstname_edittext"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_btn_margin"
            android:text="@string/search"
            android:textAllCaps="true"
            android:onClick="@{() -> viewModel.startSearch()}"
            android:enabled="@{viewModel.queryValid}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
