<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="lijewski.demodb.presentation.add.AddEmployeeViewModel" />

        <import type="lijewski.demodb.databinding.BindingUtils" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@android:color/white"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/addemployee_dialog_title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_save"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/dialog_progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:visibleInvisible="@{viewModel.isLoading}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- First name -->
                <EditText
                    android:id="@+id/firstname_edit_text"
                    style="@style/SearchDialogEditTextStyle"
                    android:hint="@string/firstname_hint"
                    android:text="@={viewModel.firstName}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <requestFocus />
                </EditText>

                <!-- Last name -->
                <EditText
                    android:id="@+id/lastname_edit_text"
                    style="@style/SearchDialogEditTextStyle"
                    android:hint="@string/lastname_hint"
                    android:text="@={viewModel.lastName}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstname_edit_text"/>

                <!-- Birthdate -->
                <DatePicker
                    android:id="@+id/birthdate_date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lastname_edit_text"/>

                <!-- Gender -->
                <TextView
                    android:id="@+id/gender_hint_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_date_picker"/>

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/genders"
                    android:selectedItemPosition="@={BindingUtils.genderToPosition(viewModel.gender)}"
                    android:spinnerMode="dropdown"
                    app:layout_constraintStart_toEndOf="@id/gender_hint_text_view"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_date_picker"/>

                <!-- Address -->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>
